LU-3521 clio: incorrect assertions in 'enable-invariants'

Fixed several incorrect assumptions in 'enable-invariants'.

Signed-off-by: Niu Yawei <yawei.niu@intel.com>
Change-Id: I0b54a26afe4e750ef887d0ca9786699bf0ca6ba2
Reviewed-on: http://review.whamcloud.com/6832
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Bobi Jam <bobijam@gmail.com>
Reviewed-by: Jinshan Xiong <jinshan.xiong@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>